test/fails/bad_casts/functions2.lgl
tag a is vec<2>;
tag b is vec<2>;

canon b f(a x, a y) { // Can't canonize things with more than 1 argument
    return [1., 2.];
}

void main() {
    print 1;
}